8184271: Time related C1 intrinsics produce inconsistent results when floating around

C1 intrinsics for System.nanoTime(), System.currentTimeMillis() and JVM.counterTime() should be pinned.

Reviewed-by: kvn, vlivanov